trying to fix spacing between home and about sections on different size screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -345,7 +345,7 @@ main #home {
 }
 @media screen and (min-width: 375px) and (max-width: 767px) {
   #home {
-    height: calc(100vh + 100px);
+    height: calc(100vh);
   }
 
   #about, #contact, #projects {
@@ -353,7 +353,7 @@ main #home {
   }
 
   #about {
-    margin-top: calc(100vh + 30vh);
+    margin-top: calc(100vh + 15vh);
   }
 
   .navbar {
